deployments/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: app
spec:
  replicas: 2
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 3
        maxUnavailable: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: crazurearchitectprod01.azurecr.io/backend:latest
        imagePullPolicy: Always
        name: backend
        resources:
          requests:
            memory: "256Mi"
            cpu: "256m"
          limits:
            memory: "256Mi"
            cpu: "256m"
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app
spec:
  ports:
  - port: 8000
    name: http
    targetPort: 8000
    protocol: TCP
  type: NodePort
  selector:
    app: backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: app
  annotations:
    appgw.ingress.kubernetes.io/use-private-ip: "flase"
    appgw.ingress.kubernetes.io/backend-protocol: "http"
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200"
  labels:
    app: backend-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
